--- a/lib/traversal/CMakeLists.txt
+++ b/lib/traversal/CMakeLists.txt
@@ -8,9 +8,12 @@ target_include_directories(traversal
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 )
 
-set_target_properties(traversal
-                      PROPERTIES
-                      LINKER_LANGUAGE CXX
-                      CXX_STANDARD 17
+target_link_libraries(traversal
+  expr-tree
+)
+
+set_target_properties(traversal PROPERTIES
+  LINKER_LANGUAGE CXX
+  CXX_STANDARD 20
 )
 
