update for spring 2023

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/out/test")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/tests")
 set(MEMCHECK "valgrind")
 
 add_library(doctest-main OBJECT
@@ -11,25 +11,33 @@ function(add_task_tests TASK_DIR TASK_NAME LIBRARIES)
   foreach(file ${files})
     get_filename_component(testcase ${file} NAME_WE)
 
-    add_executable(${testcase} $<TARGET_OBJECTS:doctest-main> ${file})
-    target_include_directories(${testcase} PRIVATE
+    add_executable(${TASK_NAME}-${testcase})
+    target_sources(${TASK_NAME}-${testcase}
+      PRIVATE
+        $<TARGET_OBJECTS:doctest-main> ${file}
+    )
+    target_include_directories(${TASK_NAME}-${testcase}
+      PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}
     )
-    target_link_libraries(${testcase} ${LIBRARIES})
-    set_target_properties(${testcase} PROPERTIES
+    target_link_libraries(${TASK_NAME}-${testcase}
+      PRIVATE
+        ${LIBRARIES}
+    )
+    target_compile_features(${TASK_NAME}-${testcase} PUBLIC cxx_std_20)
+    set_target_properties(${TASK_NAME}-${testcase} PROPERTIES
       LINKER_LANGUAGE CXX
-      CXX_STANDARD 20
     )
 
-    add_test(NAME "${testcase}"
-      COMMAND ${testcase}
+    add_test(NAME "${TASK_NAME}-${testcase}"
+      COMMAND ${TASK_NAME}-${testcase}
       WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
     )
-    set_tests_properties("${testcase}" PROPERTIES LABELS TASK_NAME)
+    set_tests_properties("${TASK_NAME}-${testcase}" PROPERTIES LABELS TASK_NAME)
 
     if(RUN_VALGRIND_TESTS)
       add_test(NAME "${testcase}_valgrind"
-        COMMAND ${MEMCHECK} ${CMAKE_CURRENT_BINARY_DIR}/${testcase}
+        COMMAND ${MEMCHECK} ${CMAKE_CURRENT_BINARY_DIR}/${TASK_NAME}-${testcase}
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
       )
       set_tests_properties("${testcase}_valgrind" PROPERTIES LABELS "valgrind;${TASK_NAME}")
@@ -37,5 +45,5 @@ function(add_task_tests TASK_DIR TASK_NAME LIBRARIES)
   endforeach()
 endfunction(add_task_tests)
 
-add_task_tests("expr-ops" "Expressions" "expr-ops")
-add_task_tests("traverse" "Traversal" "traversal")
+add_task_tests("expr-ops" "expressions" "expr-ops")
+add_task_tests("traverse" "traverse" "traversal")
