--- a/lib/expr-ops/CMakeLists.txt
+++ b/lib/expr-ops/CMakeLists.txt
@@ -1,6 +1,8 @@
 
-add_library(expr-ops
-  ExprOps.cpp
+add_library(expr-ops)
+target_sources(expr-ops
+  PRIVATE
+    ExprOps.cpp
 )
 
 target_include_directories(expr-ops
@@ -9,12 +11,13 @@ target_include_directories(expr-ops
 )
 
 target_link_libraries(expr-ops
-  expr-tree
+  PUBLIC
+    expr-tree
 )
 
+target_compile_features(expr-ops PUBLIC cxx_std_20)
 set_target_properties(expr-ops
   PROPERTIES
   LINKER_LANGUAGE CXX
-  CXX_STANDARD 20
 )
 
